force-app/main/default/objects/Contact/fields/loan_amount__c.field-meta.xml
<CustomField>
    <fullName>loan_amount__c</fullName>
    <label>loan amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>