force-app/main/default/objects/Contact/fields/prequalified__c.field-meta.xml
<CustomField>
    <fullName>prequalified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>prequalified?</label>
    <type>Checkbox</type>
</CustomField>