force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK( AccountId ) )   &amp;&amp;   (MailingPostalCode   &lt;&gt;  Account.ShippingPostalCode )</errorConditionFormula>
    <errorMessage>check for zip code</errorMessage>
</ValidationRule>